...
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDiscription"
        />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTxtUsername"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/iconDetails"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/txtboxPassword"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/iconDetails"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnCreateUserAccount"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/create_account_btn"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_vertical"
...
