...
            android:layout_below="@id/subText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:text="OK"
            android:textColor="@color/dialog_details"
            android:textSize="25sp" />

    </RelativeLayout>

</RelativeLayout>
